--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -90,7 +90,7 @@
     \frametitle{LHCb}
 
     \centering
-    \includegraphics[width=0.90\textwidth]{LHCb.jpg}
+    \includegraphics[width=0.9\textwidth]{LHCb.jpg}
 \end{frame}
 
 \begin{frame}
@@ -100,6 +100,8 @@
         \item Gère l'infrastructure logicielle de LHCb ;
         \item Maintient les programmes de traitement des données issues du détecteur.
     \end{itemize}
+
+    \includegraphics[width=\textwidth]{LHCb_stack.png}
 \end{frame}
 
 \begin{frame}
